@@ -22,6 +22,7 @@ Verilator 5.003 devel
 * Add ENUMVALUE warning when value misused for enum (#726).
 * Internal AST improvements, also affect XML format (#3721). [Geza Lore]
 * Change ENDLABEL from warning into an error.
+* Deprecate verilated_fst_sc.cpp and verilated_vcd_sc.cpp.
 * Fix return type of $countbits functions to int (#3725). [Ryszard Rozak, Antmicro Ltd]
 * Fix missing UNUSED warnings with --coverage (#3736). [alejandro-castro-ortegon]
 * Fix tracing parameters overridden with -G (#3723). [Iztok Jeras]
